examples/invalid/comment3.cp
var i # This is a comment is 0;